--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+	        	<li><a href="https://youtube.com/c/TechFenz">About</a></li>
+        		<li><a href="https://www.linkedin.com/in/nakultf/">CV</a></li>
+        		<li><a href="https://techfenzz.blogspot.com">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
