--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 	<head>
-		<title>Nakul Singh, Youtuber</title>
+		<meta charset="utf-8">
+		<title> Nakul Singh </title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
