--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title> Nakul Singh </title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/main.css">
 	</head>
-	<body>
+	<body style="background-color:grey;">
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
