--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 		<link rel="stylesheet" type="text/css" href="/main.css">
 	</head>
 	<body style="background-color:grey;">
+		
+		<div class="left">
+			<h1 class="name">Nakul Singh</h1>
+      			<h2 class="designation">Cyber Security Student</h2>
+			
+		</div>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
