--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body style="background-color:grey;">
 		
 		<div class="left">
-			<h1 class="name">Nakul Singh</h1>
+			<h1 class="name">Nakul<br>Singh</h1>
       			<h2 class="designation">Cyber Security Student</h2>
 			
 		</div>
