--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="https://youtube.com/c/TechFenz">About</a></li>
-        		<li><a href="https://www.linkedin.com/in/nakultf/">CV</a></li>
+        		<li><a href="https://www.linkedin.com/in/sn4ku1/">CV</a></li>
         		<li><a href="https://techfenzz.blogspot.com">Blog</a></li>
     		</ul>
 		</nav>
@@ -27,7 +27,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="https://github.com/nakul429">github.com/nakul429</a></li>
+        		<li><a href="https://github.com/sn4ku1">github.com/nakul429</a></li>
 			</ul>
 		</footer>
 	</body>
