--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="https://github.com/sn4ku1">github.com/nakul429</a></li>
+        		<li><a href="https://github.com/sn4ku1">github.com/sn4ku1</a></li>
 			</ul>
 		</footer>
 	</body>
