--- a/index.html
+++ b/index.html
@@ -1,34 +1,179 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-	<head>
-		<meta charset="utf-8">
-		<title> Nakul Singh </title>
-		<link rel="stylesheet" type="text/css" href="/main.css">
-	</head>
-	<body style="background-color:grey;">
-		
-		<div class="left">
-			<h1 class="name">Nakul<br>Singh</h1>
-      			<h2 class="designation">Cyber Security Student</h2>
-			
-		</div>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="https://youtube.com/c/TechFenz">About</a></li>
-        		<li><a href="https://www.linkedin.com/in/sn4ku1/">CV</a></li>
-        		<li><a href="https://techfenzz.blogspot.com">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Nakul Singh!</h1>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="https://github.com/sn4ku1">github.com/sn4ku1</a></li>
-			</ul>
-		</footer>
-	</body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NAKUL SINGH || CYBER SECURITY</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="img3.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul id="bar">
+                <a href="#profile">
+                    <li id="l1" class="head">PROFILE</li>
+                </a>
+                <a href="#skill">
+                    <li id="l2" class="head">SKILLS</li>
+                </a>
+                <a href="#education">
+                    <li id="l3" class="head">EDUCATION</li>
+                </a>
+                <a href="#achieve">
+                    <li id="l4" class="head">ACHIEVEMENTS</li>
+                </a>
+                <a href="#contact">
+                    <li id="l5" class="head">CONTACT</li>
+                </a>
+            </ul>
+        </nav>
+    </header>
+    <div id="profile">
+            <div id="p1">
+
+                <div id="name" >
+                    NAKUL SINGH
+                </div>
+                <div id="work" >CYBER SECURITY STUDENT </div>
+            </div>
+        <div id="info"> I am 3rd year student of B.Tech CSE Cyber Security in The
+            NorthCap University, Gurugram, Haryana. I am learning
+            Ethical Hacking to protect everyone from cyber crime.
+        </div>
+    </div>
+    <div id="skill">
+            <div id="s1">
+                SKILLS
+            </div>
+            <div id="s2">
+                <ul>
+                <li>
+                    Knowledge of Kali Linux and its tools.
+
+                </li>
+                <li>
+
+                    Computer Networking and Network Security.
+                </li>
+                <li>
+                    Secure Communication and Secure Coding.
+                </li>
+                <li>
+
+                    Vulnerability Assessment and Penetration Testing.
+                </li>
+                <li>
+
+                    Digital Forensics and Malware Analysis.
+                </li>
+                <li>
+
+                    Python and Assembly Language.
+                </li>
+                <li>
+                    Familiar with Windows Operating System.
+
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div id="education">
+        <div id="e1">
+            EDUCATION
+        </div>
+        <div id="e2">
+            <ul>
+                <li>
+                    10TH (2016) SKS School, Rewari (88.8%)
+
+                </li>
+                <li>
+                    12TH (2018) SKS School, Rewari (87.4%)
+
+                </li>
+                <li>
+                    B.TECH CSE CYBER SECURITY 
+                    The NorthCap University, Gurugram (2019-
+                        <span id="change1">
+                            Present
+                        </span>
+                        <!-- <span id="change2"> -->
+                            <!-- 2023 -->
+                        <!-- </span> -->
+                    )
+
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div id="achieve">
+        <div id="a1">
+            ACHIEVEMENTS
+        </div>
+        <div id="a2">
+            <ul>
+                <li>
+                    FICKLEM Licensed Penetration Tester (2021-2026)
+                </li>
+                <li>
+                    ExIntern of Gurugram Police Cyber Cell (GPCSSI 2021)
+
+                </li>
+                <li>
+                    Web Application Security Internship at PAC Security LLP
+
+                </li>
+                <li>
+
+                    BRSC Certified Ethical Hacker
+                </li>
+                <li>
+
+                    FICKLEM Certified Ethical Hacker (2021-2026)
+                </li>
+            </ul>
+
+
+        </div>
+    </div>
+    <div id="contact">
+        <div id="c1">
+            Contact Me
+        </div>
+        <div id="c2">
+
+            <ul>
+                <li>
+                Address: Kalaka, Rewari, Haryana
+
+            </li>
+            <li>
+                E-mail: nakul19csu183@ncuindia.edu
+
+            </li>
+            <li>
+
+                Phone: +918930830601
+            </li>
+            <li>
+                Linkedin:/sn4ku1
+
+            </li>
+        </ul>
+    </div>
+
+    </div>
+    <hr>
+    <footer>
+        <div id="foot">
+            &copy; 2022 &real;eserved under NS || CYBER SECURITY
+        </div>
+    </footer>
+</body>
+
 </html>
