--- a/index.html
+++ b/index.html
@@ -5,163 +5,124 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NAKUL SINGH || CYBER SECURITY</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="img3.jpg">
+    <title>Document</title>
+    <link rel="stylesheet" href="index2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul id="bar">
-                <a href="#profile">
-                    <li id="l1" class="head">PROFILE</li>
-                </a>
-                <a href="#skill">
-                    <li id="l2" class="head">SKILLS</li>
-                </a>
-                <a href="#education">
-                    <li id="l3" class="head">EDUCATION</li>
-                </a>
-                <a href="#achieve">
-                    <li id="l4" class="head">ACHIEVEMENTS</li>
-                </a>
-                <a href="#contact">
-                    <li id="l5" class="head">CONTACT</li>
-                </a>
-            </ul>
-        </nav>
-    </header>
-    <div id="profile">
-            <div id="p1">
-
-                <div id="name" >
-                    NAKUL SINGH
-                </div>
-                <div id="work" >CYBER SECURITY STUDENT </div>
-            </div>
-        <div id="info"> I am 3rd year student of B.Tech CSE Cyber Security in The
+    <div id="info">
+        <div id="info1">
+            Hey, I'm Nakul
+        </div>
+        <div id="info2">
+            Singh.
+        </div>
+    </div>
+    <div class="circle">
+        <div id="circle"></div>
+        <div id="circle1"></div>
+        <div id="circle2"></div>
+    </div>
+    <div class="section">
+        <div id="sec1">
+            <img src="img3.jpg" alt="">
+        </div>
+        <div id="sec2">
+            I am 3rd year student of B.Tech CSE Cyber Security in The
             NorthCap University, Gurugram, Haryana. I am learning
             Ethical Hacking to protect everyone from cyber crime.
         </div>
     </div>
-    <div id="skill">
-            <div id="s1">
-                SKILLS
-            </div>
-            <div id="s2">
+    <section>
+        <hr>
+        <div class="skill">
+            <div id="skilltitle">SKILLS</div>
+            <div id="skillinfo">
                 <ul>
-                <li>
-                    Knowledge of Kali Linux and its tools.
+                    <li>
 
-                </li>
-                <li>
+                        Knowledge of Kali Linux and its tools.
+                    </li>
+                    <li>
 
-                    Computer Networking and Network Security.
-                </li>
-                <li>
-                    Secure Communication and Secure Coding.
-                </li>
-                <li>
+                        Digital Forensics and Malware Analysis.
+                    </li>
+                    <li>
 
-                    Vulnerability Assessment and Penetration Testing.
-                </li>
-                <li>
+                        Vulnerability Assessment and Penetration Testing.
+                    </li>
+                    <li>
+                        Secure Communication and Secure Coding.
 
-                    Digital Forensics and Malware Analysis.
-                </li>
-                <li>
+                    </li>
+                    <li>
+                        Python and Assembly Language.
 
-                    Python and Assembly Language.
-                </li>
-                <li>
-                    Familiar with Windows Operating System.
+                    </li>
+                    <li>
+                        Familiar with Windows Operating System.
 
-                </li>
-            </ul>
+                    </li>
+                    <li>
+
+                        Computer Networking and Network Security.
+                    </li>
+                </ul>
+
+            </div>
         </div>
-    </div>
-    <div id="education">
-        <div id="e1">
-            EDUCATION
+        <hr>
+        <div class="edu">
+            <div id="edutitle">EDUCATION</div>
+            <div id="eduinfo">
+                <ul>
+                    <li>
+
+                        10TH (2016) => SKS School, Rewari (88.8%)
+                    </li>
+                    <li>
+
+                        12TH (2018) => SKS School, Rewari (87.4%)
+                    </li>
+                    <li>
+
+                        B.TECH CSE CYBER SECURITY => The NorthCap University, Gurugram (2019-Present)
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div id="e2">
-            <ul>
-                <li>
-                    10TH (2016) SKS School, Rewari (88.8%)
+        <hr>
+        <div class="achieve">
+            <div id="achievetitle">ACHIEVEMENTS</div>
+            <div id="achieveinfo">
+                <ul>
+                    <li>
+                        FICKLEM Licensed Penetration Tester (2021-2026)
 
-                </li>
-                <li>
-                    12TH (2018) SKS School, Rewari (87.4%)
+                    </li>
+                    <li>
+                        ExIntern of Gurugram Police Cyber Cell (GPCSSI 2021)
 
-                </li>
-                <li>
-                    B.TECH CSE CYBER SECURITY 
-                    The NorthCap University, Gurugram (2019-
-                        <span id="change1">
-                            Present
-                        </span>
-                        <!-- <span id="change2"> -->
-                            <!-- 2023 -->
-                        <!-- </span> -->
-                    )
+                    </li>
+                    <li>
 
-                </li>
-            </ul>
+                        Web Application Security Internship at PAC Security LLP
+                    </li>
+                    <li>
+                        BRSC Certified Ethical Hacker
+
+                    </li>
+                    <li>
+
+                        FICKLEM Certified Ethical Hacker (2021-2026)
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div id="achieve">
-        <div id="a1">
-            ACHIEVEMENTS
-        </div>
-        <div id="a2">
-            <ul>
-                <li>
-                    FICKLEM Licensed Penetration Tester (2021-2026)
-                </li>
-                <li>
-                    ExIntern of Gurugram Police Cyber Cell (GPCSSI 2021)
 
-                </li>
-                <li>
-                    Web Application Security Internship at PAC Security LLP
-
-                </li>
-                <li>
-
-                    BRSC Certified Ethical Hacker
-                </li>
-                <li>
-
-                    FICKLEM Certified Ethical Hacker (2021-2026)
-                </li>
-            </ul>
-
-
-        </div>
-    </div>
-    <div id="contact">
-        <div id="c1">
-            Contact Me
-        </div>
-        <div id="c2">
-
-            <ul>
-            <li>
-                Linkedin:/sn4ku1
-
-            </li>
-        </ul>
-    </div>
-
-    </div>
-    <hr>
-    <footer>
-        <div id="foot">
-            &copy; 2022 &real;eserved under NS || CYBER SECURITY
-        </div>
-    </footer>
+        <hr>
+    </section>
 </body>
 
 </html>
