--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="section">
         <div id="sec1">
-            <img src="img3.jpg" alt="">
+            <img src="/images/img3.jpg" alt="HACK">
         </div>
         <div id="sec2">
             I am 3rd year student of B.Tech CSE Cyber Security in The
