--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NS THE HACKER</title>
+    <title>sn4ku1</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" href="/images/icon.png">
 </head>
 
 <body>
     <div id="info">
         <div id="info1">
-            Hey, I'm Nakul
+            Hey, I'm
         </div>
         <div id="info2">
-            Singh.
+            Nakul Singh.
         </div>
     </div>
     <div class="circle">
@@ -26,7 +27,7 @@
     </div>
     <div class="section">
         <div id="sec1">
-            <img src="/images/img3.jpg" alt="HACK">
+            <img src="/images/sn4ku1.png" alt="HACK">
         </div>
         <div id="sec2">
             I am 3rd year student of B.Tech CSE Cyber Security in The
@@ -79,11 +80,11 @@
                 <ul>
                     <li>
 
-                        10TH (2016) => SKS School, Rewari (88.8%)
+                        10TH (2016) => SKS School, Rewari
                     </li>
                     <li>
 
-                        12TH (2018) => SKS School, Rewari (87.4%)
+                        12TH (2018) => SKS School, Rewari
                     </li>
                     <li>
 
