--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <div id="info">
         <div id="info1">
-            Hey, I'm
+            Hi, I'm Nakul Singh,
         </div>
         <div id="info2">
-            Nakul Singh.
+            an Ethical Hacker from India. 
         </div>
     </div>
     <div class="circle">
@@ -25,17 +25,14 @@
         <div id="circle1"></div>
         <div id="circle2"></div>
     </div>
-    <div class="section">
-        <div id="sec1">
-            <img src="/images/sn4ku1.png" alt="HACK">
-        </div>
-        <div id="sec2">
+    <div class="about">
+        <div id="abouttitle">ABOUT</div>
+        <div id="aboutinfo">
             I am 3rd year student of B.Tech CSE Cyber Security in The
             NorthCap University, Gurugram, Haryana. I am learning
             Ethical Hacking to protect everyone from cyber crime.
         </div>
     </div>
-    <section>
         <hr>
         <div class="skill">
             <div id="skilltitle">SKILLS</div>
