--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
             Hi, I'm Nakul Singh,
         </div>
         <div id="info2">
-            an Ethical Hacker from India. 
+            an Ethical Hacker 
         </div>
-    </div>
-    <div class="circle">
-        <div id="circle"></div>
-        <div id="circle1"></div>
-        <div id="circle2"></div>
+        <div id="info3">
+            from India. 
+        </div>
     </div>
     <div class="about">
         <div id="abouttitle">ABOUT</div>
