--- a/index.html
+++ b/index.html
@@ -5,120 +5,105 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sn4ku1</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="icon" href="/images/icon.png">
+    <title>Nakul Singh</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <div id="info">
+    <div class="info">
         <div id="info1">
-            Hi, I'm Nakul Singh,
+            <div>
+                Hi, I'm Nakul Singh,
+            </div>
+            <div>
+                an Ethical Hacker
+            </div>
+            <div>
+                from India.
+            </div>
         </div>
         <div id="info2">
-            an Ethical Hacker 
-        </div>
-        <div id="info3">
-            from India. 
+            <img src="icon.png" alt="">
         </div>
     </div>
-    <div class="about">
-        <div id="abouttitle">ABOUT</div>
-        <div id="aboutinfo">
-            I am 3rd year student of B.Tech CSE Cyber Security in The
-            NorthCap University, Gurugram, Haryana. I am learning
-            Ethical Hacking to protect everyone from cyber crime.
+    <section>
+        <div class="about">
+            <div id="abouttitle">
+                About :-
+            </div>
+            <div id="aboutinfo">
+                <p>
+                    
+                    I am 3rd year student of B.Tech CSE Cyber Security in The NorthCap University, Gurugram, Haryana. I am
+                    learning Ethical Hacking to protect everyone from cyber crime.
+                </p>
+            </div>
         </div>
-    </div>
-        <hr>
         <div class="skill">
             <div id="skilltitle">SKILLS</div>
             <div id="skillinfo">
                 <ul>
                     <li>
-
                         Knowledge of Kali Linux and its tools.
                     </li>
                     <li>
-
                         Digital Forensics and Malware Analysis.
                     </li>
                     <li>
-
                         Vulnerability Assessment and Penetration Testing.
                     </li>
                     <li>
                         Secure Communication and Secure Coding.
-
                     </li>
                     <li>
                         Python and Assembly Language.
-
                     </li>
                     <li>
                         Familiar with Windows Operating System.
-
                     </li>
                     <li>
-
                         Computer Networking and Network Security.
                     </li>
                 </ul>
-
             </div>
         </div>
-        <hr>
         <div class="edu">
             <div id="edutitle">EDUCATION</div>
             <div id="eduinfo">
                 <ul>
                     <li>
-
-                        10TH (2016) => SKS School, Rewari
+                        10TH (2016) => SKS School, Rewari (88.8%)
                     </li>
                     <li>
-
-                        12TH (2018) => SKS School, Rewari
+                        12TH (2018) => SKS School, Rewari (87.4%)
                     </li>
                     <li>
-
                         B.TECH CSE CYBER SECURITY => The NorthCap University, Gurugram (2019-Present)
                     </li>
                 </ul>
             </div>
         </div>
-        <hr>
         <div class="achieve">
             <div id="achievetitle">ACHIEVEMENTS</div>
             <div id="achieveinfo">
                 <ul>
                     <li>
                         FICKLEM Licensed Penetration Tester (2021-2026)
-
                     </li>
                     <li>
                         ExIntern of Gurugram Police Cyber Cell (GPCSSI 2021)
-
                     </li>
                     <li>
-
                         Web Application Security Internship at PAC Security LLP
                     </li>
                     <li>
-                        BRSC Certified Ethical Hacker
-
-                    </li>
-                    <li>
-
                         FICKLEM Certified Ethical Hacker (2021-2026)
                     </li>
                 </ul>
             </div>
         </div>
-
-        <hr>
     </section>
+    <p></p>
 </body>
 
 </html>
