--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nakul Singh</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/sn4ku1.github.io/css/main.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div id="info2">
-            <img src="icon.png" alt="">
+            <img src="/sn4ku1.github.io/images/icon.png" alt="">
         </div>
     </div>
     <section>
@@ -33,7 +33,6 @@
             </div>
             <div id="aboutinfo">
                 <p>
-                    
                     I am 3rd year student of B.Tech CSE Cyber Security in The NorthCap University, Gurugram, Haryana. I am
                     learning Ethical Hacking to protect everyone from cyber crime.
                 </p>
@@ -72,13 +71,13 @@
             <div id="eduinfo">
                 <ul>
                     <li>
-                        10TH (2016) => SKS School, Rewari (88.8%)
+                        10TH (2016) => SKS School, Rewari
                     </li>
                     <li>
-                        12TH (2018) => SKS School, Rewari (87.4%)
+                        12TH (2018) => SKS School, Rewari
                     </li>
                     <li>
-                        B.TECH CSE CYBER SECURITY => The NorthCap University, Gurugram (2019-Present)
+                        B.TECH CSE CYBER SECURITY => The NorthCap University, Gurugram, Haryana.
                     </li>
                 </ul>
             </div>
