--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nakul Singh</title>
-    <link rel="stylesheet" href="/sn4ku1.github.io/css/main.css">
+    <link rel="icon" href="/images/icon.png">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
@@ -23,7 +24,7 @@
             </div>
         </div>
         <div id="info2">
-            <img src="/sn4ku1.github.io/images/icon.png" alt="">
+            <img src="/images/icon.png" alt="">
         </div>
     </div>
     <section>
