--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="60-wiLNnQSNuxCAujBG1a9egO4eTeBLy-T0x200VN9g">
     <title>Nakul Singh</title>
     <link rel="icon" href="/images/icon.png">
     <link rel="stylesheet" href="/css/main.css">
@@ -34,8 +35,7 @@
             </div>
             <div id="aboutinfo">
                 <p>
-                    I am 3rd year student of B.Tech CSE Cyber Security in The NorthCap University, Gurugram, Haryana. I am
-                    learning Ethical Hacking to protect everyone from cyber crime.
+                    I am 3rd year student of B.Tech CSE Cyber Security in The NorthCap University, Gurugram, Haryana. I am learning Ethical Hacking to protect everyone from cyber crime.
                 </p>
             </div>
         </div>
@@ -53,16 +53,13 @@
                         Vulnerability Assessment and Penetration Testing.
                     </li>
                     <li>
-                        Secure Communication and Secure Coding.
-                    </li>
-                    <li>
-                        Python and Assembly Language.
-                    </li>
-                    <li>
                         Familiar with Windows Operating System.
                     </li>
                     <li>
                         Computer Networking and Network Security.
+                    </li>
+                    <li>
+                        Scripting (python)
                     </li>
                 </ul>
             </div>
@@ -72,13 +69,13 @@
             <div id="eduinfo">
                 <ul>
                     <li>
-                        10TH (2016) => SKS School, Rewari
+                        10TH (Science) -> SKS School
                     </li>
                     <li>
-                        12TH (2018) => SKS School, Rewari
+                        12TH (PCM) -> SKS School
                     </li>
                     <li>
-                        B.TECH CSE CYBER SECURITY => The NorthCap University, Gurugram, Haryana.
+                        B.TECH CSE CYBER SECURITY -> The NorthCap University
                     </li>
                 </ul>
             </div>
@@ -98,6 +95,25 @@
                     </li>
                     <li>
                         FICKLEM Certified Ethical Hacker (2021-2026)
+                    </li>
+                    <li>
+                        NSE 1 Network Security Associate
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="curricular">
+            <div id="curriculartitle">ACHIEVEMENTS</div>
+            <div id="curricularinfo">
+                <ul>
+                    <li>
+                        Volunteered in The International Conference on Cyber Security and Digital Forensics 2021
+                    </li>
+                    <li>
+                        Co-Founder and Secretary of Run-A-Thonia
+                    </li>
+                    <li>
+                        Technical Head in College Society
                     </li>
                 </ul>
             </div>
