--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="60-wiLNnQSNuxCAujBG1a9egO4eTeBLy-T0x200VN9g">
+    <meta name="google-site-verification" content="WXn-1EHP9JRpqgW-DVWxuPm32PXvzVPr97g2TE_vtas" />
     <title>Nakul Singh</title>
     <link rel="icon" href="/images/icon.png">
     <link rel="stylesheet" href="/css/main.css">
@@ -69,13 +69,13 @@
             <div id="eduinfo">
                 <ul>
                     <li>
-                        10TH (Science) -> SKS School
+                        10TH (Science) - SKS School
                     </li>
                     <li>
-                        12TH (PCM) -> SKS School
+                        12TH (PCM) - SKS School
                     </li>
                     <li>
-                        B.TECH CSE CYBER SECURITY -> The NorthCap University
+                        B.TECH CSE CYBER SECURITY - The NorthCap University
                     </li>
                 </ul>
             </div>
