--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="info">
         <div id="info1">
             <div>
-                Hi, I'm Nakul Singh,
+                Hi, I'm <a href="https://www.linkedin.com/in/sn4ku1/"> Nakul Singh </a>,
             </div>
             <div>
                 an Ethical Hacker
@@ -99,11 +99,14 @@
                     <li>
                         NSE 1 Network Security Associate
                     </li>
+                    <li>
+                        Currently in Top 3% on TryHackMe
+                    </li>
                 </ul>
             </div>
         </div>
         <div class="curricular">
-            <div id="curriculartitle">ACHIEVEMENTS</div>
+            <div id="curriculartitle">EXTRACURRICULAR ACTIVITIES</div>
             <div id="curricularinfo">
                 <ul>
                     <li>
