--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div id="aboutinfo">
                 <p>
-                    I am 3rd year student of B.Tech CSE Cyber Security in The NorthCap University, Gurugram, Haryana. I am learning Ethical Hacking to protect everyone from cyber crime.
+                    I am learning Ethical Hacking to protect everyone from cyber crime.
                 </p>
             </div>
         </div>
@@ -60,22 +60,6 @@
                     </li>
                     <li>
                         Scripting (python)
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="edu">
-            <div id="edutitle">EDUCATION</div>
-            <div id="eduinfo">
-                <ul>
-                    <li>
-                        10TH (Science) - SKS School
-                    </li>
-                    <li>
-                        12TH (PCM) - SKS School
-                    </li>
-                    <li>
-                        B.TECH CSE CYBER SECURITY - The NorthCap University
                     </li>
                 </ul>
             </div>
