--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="WXn-1EHP9JRpqgW-DVWxuPm32PXvzVPr97g2TE_vtas" />
-    <title>Nakul Singh</title>
+    <title>sn4ku1</title>
     <link rel="icon" href="/images/icon.png">
     <link rel="stylesheet" href="/css/main.css">
 </head>
@@ -17,6 +17,7 @@
             <img src="/images/icon.png" alt="">
         </div>
     </div>
+    <h1>POC By sn4ku1</h1>
 </body>
 
 </html>
